Change images folder name to assets and create gitignore file

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div class="face">
         <header>
-            <img src="images/logo_space_cream.svg" alt="Illustrates lilac ice cream cone over the image of a circle
+            <img src="assets/logo_space_cream.svg" alt="Illustrates lilac ice cream cone over the image of a circle
             white containing small gray circles.">
             <h1>Space Cream</h1>
         </header>
@@ -41,26 +41,26 @@
 
             <div class="card">
                 <p>Paletas</p>
-                <img src="images/paletas.jpg" alt="Strawberry paletas,
+                <img src="assets/paletas.jpg" alt="Strawberry paletas,
                 one of them bitten oozing condensed milk
                 next to a bowl of fresh strawberries.">
             </div>
 
             <div class="card">
                 <p>Shakes</p>
-                <img src="images/shakes.jpg" alt="Two tall glasses containing milkshakes
+                <img src="assets/shakes.jpg" alt="Two tall glasses containing milkshakes
                 of chocolate and straws.">
             </div>
 
             <div class="card">
                 <p>Ice cream</p>
-                <img src="images/sorvetes.jpg" alt="creamy chocolate ice cream mass,
+                <img src="assets/sorvetes.jpg" alt="creamy chocolate ice cream mass,
                 being scooped out with a ladle.">
             </div>
 
             <div class="card">
                 <p>Popsicles</p>
-                <img src="images/picoles.jpg" alt="Two popsicles with toppings
+                <img src="assets/picoles.jpg" alt="Two popsicles with toppings
                 different chocolate.">
             </div>
         </section>
